# fahmai-fin-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  gt.csv  gt_claude.csv  gt_public0.83.csv  main.py  pyproject.toml  requirements.txt  run_submission.py  submission.csv  submission_groundtruth.csv  test4.py
docs/: API.md
fahmai/: __init__.py  api.py  db.py  embed.py  rag_db.py
fahmai/agents/: README.md  __init__.py  config.py  data.py  evaluate.py  graph.py  llm.py  runner.py
fahmai/agents/guardrails/: __init__.py  input_guard.py  output_guard.py  patterns.py
fahmai/agents/prompts/: __init__.py  classify.py  compute.py  doc.py  planner.py  rag.py  sql.py  sql_verify.py  synth.py  verify.py
fahmai/agents/specialists/: __init__.py  base.py  doc_researcher.py  sql_analyst.py  (+1 more)
fahmai/ingestion/: embed_docs.py  load_docs.py  load_to_supabase.py
fahmai/ocr/: README.md  __init__.py  bank_statement.py  shared.py
fahmai/tools/: __init__.py  doc_tool.py  enum_dict.py  mschema.py  mschema_grading.py  schema_card.py  sql_tool.py
fahmai/utils/: __init__.py  dedup.py  json_parse.py  safe_eval.py  scoring.py
scripts/: _build_eval_nb.py  _build_nb.py  _probe_region.py  _run_nb.py  _smoke_team.py  _test5.py  _trace_test.py  _validate_docs.py  _validate_vec.py  apply_sql.py  build_enum_dictionary.py  build_gold_submission.py  build_gt_claude.py  build_mschema.py  build_question_methods.py  ground_truth.py  load_warranty_ocr.py  patch_achi.py  progress.py  score_vs_gt.py  score_vs_gt_claude.py  setup_docs.sql  setup_keys.sql  setup_vec.sql  test10.py  test_vllm_api.py
(+5 files in other folders)
