[project]
name = "fahmai-hack"
version = "0.1.0"
description = "FahMai L3 data-team agent (LangGraph multi-agent over Supabase Postgres + docs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "ipykernel>=7.2.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "supabase>=2.30.1",
    "torch>=2.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
fahmai = "fahmai.agents.runner:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fahmai*"]
